--- a/package.json
+++ b/package.json
@@ -6,17 +6,20 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "chromedriver": "^85.0.1",
+    "geckodriver": "^1.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "vue-router": "^3.4.3"
+    "selenium-webdriver": "^3.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "mocha test/*.js",
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && rsync -av build/* deploy@mh-jsramverk.me:/var/www/mh-jsramverk.me/html/"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -32,5 +35,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "eslint": "^6.6.0",
+    "eslint-plugin-react": "^7.21.2",
+    "javascript-style-guide": "^1.0.1",
+    "mocha": "^8.1.3",
+    "nyc": "^15.1.0"
   }
 }
