--- a/.travis.yml
+++ b/.travis.yml
@@ -11,13 +11,22 @@ sudo: false
 git:
     submodules: false
 
+addons:
+    firefox: "60.0.1"
+
+before_install:
+    - wget https://github.com/mozilla/geckodriver/releases/download/v0.27.0/geckodriver-v0.27.0-linux64.tar.gz
+    - mkdir geckodriver
+    - tar -xzf geckodriver-v0.27.0-linux64.tar.gz -C geckodriver
+    - export PATH=$PATH:$PWD/geckodriver
+
 before_script:
-    - npm install -g forever
+    - npm install
 
 script:
     - npm test
 
 after_success:
-    - forever stopall
+    # - forever stopall
     - npm run report-coveralls
     - npm run report-codecov
