--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ before_install:
     - export PATH=$PATH:$PWD/geckodriver
 
 before_script:
+    - npm install selenium-webdriver@^3.6.0
     - npm install
 
 script:
