--- a/.travis.yml
+++ b/.travis.yml
@@ -11,18 +11,18 @@ sudo: false
 git:
     submodules: false
 
-addons:
-    firefox: "60.0.1"
-
+# addons:
+#     firefox: "60.0.1"
 
 before_script:
     - npm install selenium-webdriver@^3.6.0
-    - npm install
+    - npm install -g forever
 
 script:
+    - forever start -c 'npm start' ./
     - npm test
 
-after_success:
-    # - forever stopall
-    - npm run report-coveralls
-    - npm run report-codecov
+after_script:
+    - forever stopall
+    # - npm run report-coveralls
+    # - npm run report-codecov
