--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,13 @@ git:
 
 before_script:
     # - npm install selenium-webdriver@^3.6.0
-    - npm install
+    - npm install -g forever
 
 script:
+    - forever start -c 'npm start' ./
     - npm test
 
 after_script:
-    - npm run report-coveralls
-    - npm run report-codecov
+    - forever stopall
+    # - npm run report-coveralls
+    # - npm run report-codecov
