--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,10 @@ git:
 
 before_script:
     # - npm install selenium-webdriver@^3.6.0
-    - npm install
+    - npm install -g forever
 
 script:
+    - forever start -c 'npm start' ./
     - npm test
 
 after_script:
